syntax = "proto3";
package center;

service Greeter {
    rpc SayHello (HelloReq) returns (HelloRes);
}

message HelloReq {
    string name = 2;
}

message HelloRes {
    string message = 1;
}
